Refactor create/delete ad apis
